--- a/app/views/partial/_footer.html.erb
+++ b/app/views/partial/_footer.html.erb
@@ -1,18 +1,18 @@
 <div class="footer">
   <div class="footer-content" style="text-align: center;">
-    <%= link_to'/', class: "text-light" do %>
+    <%= link_to about_path, class: "text-light" do %>
     MyTeriorについて
     <% end %>
     <span style="color: white; font-family: Arial, sans-serif;"><strong>｜©︎MyTerior.inc｜</strong></span>
-    <%= link_to'/', class: "text-light" do%>
-    利用方法
+    <%= link_to terms_path, class: "text-light" do%>
+    利用規約
     <% end %>
   </div>
 </div>
 
 <style>
   .footer {
-    position: fixed;
+    position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
