--- a/app/views/user/homes/about.html.erb
+++ b/app/views/user/homes/about.html.erb
@@ -1,13 +1,43 @@
-<header>
-<div class="container-fluid">
-    <div class="row text-center">
-      <div class="col-md myterior_header">
-          <%#= image_tag 'MyTerior_header.png', height: '220' %>
-      </div>
+<div class="container container_about">
+  <div class="main">
+    <h1 class="about_title">このサイトについて</h1>
+    <div class="row">
+      <div class="col a_content_about">
+        <p>
+          MyTerior(マイテリア)は、賃貸のための、<br>
+          インテリアや家具を共有できるSNSサイトです。<br>
+          インテリアのアイデアを広げたり、家具を探す際に<br>
+          参考としてご活用ください。
+        </p>
+        <hr>
+        <div class="col a_content_about">
+          <h3 class="about_sub_title">どういう時に使うの？</h3>
+          <h6>MyTeriorでは以下の際にご活用できます。</h6>
+          <p>
+            <ul>
+            <li>家具を買いたい時、自分の部屋のイメージに合うかどうか 確かめたい時</li>
+            <li>インテリアに興味が出たり、部屋をアップグレードさせたいと思った時</li>
+            <li>部屋のサイズに合わせて、インテリアを作りたい時</li>
+            <li>QOLを上げたいと思った時</li>
+            <li>引越しをしようとしていて、参考になるインテリアをもとに<br>
+            間取りを探したい時</li>
+            <li>自分の部屋が誰かのアイデアにつながると思った時</li>
+            </ul>
+          </p>
+        </div>
+        <hr>
+        <div class="col content_about_notice">
+          <p>
+            ＊ 当サイトに掲載されている画像の著作権は各権利者に帰属します。
+          </P>
+          <p>
+            ＊ 掲載に関するお問い合わせ・削除のご依頼は、お手数ですがxxx@xxx.comよりご連絡をお願いいたします。
+          </p>
+          <p>
+            ＊ 広告掲載をご希望の方は、(000-0000-0000)までお問い合わせをお願いいたします。
+          </p>
+        </div>
+      </div> 
     </div>
-</div>
-</header>
-
-<div class="text-center">
-  About
+  </div>
 </div>
