--- a/app/views/partial/_navbar.html.erb
+++ b/app/views/partial/_navbar.html.erb
@@ -1,5 +1,4 @@
 <nav class="navbar navbar-expand-lg navbar-light">
-  <div class="profile-icon"></div>
   <div class="container-fluid h-100">
     <% if user_signed_in? %>
       <%= link_to home_path, class: "navbar-brand h-100" do %>
@@ -32,29 +31,11 @@
           </ul>
         <% else %>
           <!-- 通常のユーザー用のナビゲーションメニュー -->
-          <form class="form-inline">
-            <%= form_with url: search_path, local: true, method: :get, class: "form-inline" do |f| %>
-              <div class="dropdown">
-                <button class="btn btn-outline-secondary my-2 my-sm-0 dropbtn" type="button">
-                  <i class="fa-solid fa-caret-down"></i>
-                </button>
-                <div class="dropdown-content">
-                  <%= f.select :range, options_for_select([["ユーザー", 'User'], ["投稿", 'Post'],["間取り", 'Genre']]), {}, { class: 'dropdown-select form-control' } %>
-                </div>
-              </div>
-              <%= f.text_field :word, class: "form-control mr-sm-2", placeholder: "検索" %>
-              <%= button_tag type: 'submit', class: "btn btn-outline-secondary my-2 my-sm-0" do %>
-                🔍
-              <% end %>
-            <% end %>
-          </form>
+          <div class="form-inline">
+            <%= render 'partial/search' %>
+          </div>
           <ul class="navbar-nav">
             <% if admin_signed_in? %>
-              <li class="nav-item">
-                <%= link_to "#", class: 'nav-link text-dark' do %>
-                  管理者ルール
-                <% end %>
-              </li>
               <li class="nav-item">
                 <%= link_to admin_posts_path, class: 'nav-link text-dark' do %>
                   投稿管理
