--- a/app/views/user/searches/search_result.html.erb
+++ b/app/views/user/searches/search_result.html.erb
@@ -5,13 +5,20 @@
   <% if @range == "User" %>
     <tbody>
       <% @users.each do |user| %>
-        <tr>
-          <td><%= user.name %></td>
-        </tr>
+       <tr>
+         <td><%= user.id %></td>
+         <td>
+           <%= image_tag user.get_profile_photo, class: "post-profile-icon" %>
+         </td>
+         <td>
+           <%= link_to user_path(user.id), class: "text-green" do %>
+           <%= user.name %>
+           <% end %>
+         </td>
       <% end %>
     </tbody>
+  <!--検索対象モデルがUserではない時(= 検索対象モデルがBookの時) -->s
   <% elsif @post == "Post" %>
-    <!--検索対象モデルがUserではない時(= 検索対象モデルがBookの時) -->
     <tbody>
       <% @posts.each do |post| %>
         <tr>
@@ -20,21 +27,7 @@
         </tr>
       <% end %>
     </tbody>
-  <% end %>
-  <% elsif @post == "Post" %>
-    <!--検索対象モデルがUserではない時(= 検索対象モデルがBookの時) -->
-    <tbody>
-      <% @posts.each do |post| %>
-        <tr>
-          <td><%= post.caption %></td>
-          <td><%= post.genre %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  <% end %>
-  
   <% elsif @genre == "Genre" %>
-    <!--検索対象モデルがUserではない時(= 検索対象モデルがBookの時) -->
     <tbody>
       <% @genres.each do |genre| %>
         <tr>
@@ -42,5 +35,7 @@
         </tr>
       <% end %>
     </tbody>
+  <% else %>
+  <h1>検索結果がありません。</h1>
   <% end %>
 </table>
