--- a/app/views/user/users/edit.html.erb
+++ b/app/views/user/users/edit.html.erb
@@ -1,3 +1,7 @@
+<div class="col-box-1">
+  <%= render "layouts/errors", obj: @user %>
+</div>
+
 <div class="col-md-offset-2 mb-4 edit-profile-wrapper">
   <div class="row">
     <div class="col-md-8 mx-auto">
@@ -10,7 +14,7 @@
           </div>
           
           <div class="form-group">
-            <%= f.label :name, "名前" %>
+            <%= f.label :name, "ネーム" %>
             <%= f.text_field :name, autofocus: true, class: "form-control" %>
           </div>
 
