--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -26,7 +26,8 @@
       </div>
       <div class="w-layout">
          <%= link_to user_guest_sign_in_path, method: :post, class: "button" do %>
-         ゲストログインはこちら
+         ゲストログインはこちら(閲覧専用)
+         
          <%end %>
       </div>
     </div>
