--- a/app/views/user/posts/index.html.erb
+++ b/app/views/user/posts/index.html.erb
@@ -6,19 +6,7 @@
     </aside>
     <!-- メインコンテンツ -->
     <main class="col-md-9 col-12 mx-auto">
-      <div class="container">
-        <div class="row">
-          <% @posts.each do |post| %>
-            <div class="col-md-3 col-sm-6 col-12">
-              <div class="item" style="margin: 10px; border: none; border-radius: 5px; width: 100%;">
-                <%= link_to(post_path(post)) do %>
-                  <%= image_tag post.photos.first.image.url(:medium), class: "card-img-top" %>
-                <% end %>
-              </div>
-            </div>
-          <% end %>
-        </div>
-      </div>
-    </main>
+   <%= render 'index', posts: @posts %>
+   </main>
   </div>
 </div>
