--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -27,7 +27,7 @@
         </div>
         
         <div class="form-group form-check">
-          <%= f.check_box :agreement, :as => :boolean, checked:false %>
+          <%= f.check_box :agreement %>
           <%= link_to terms_path do%>
             利用規約とプライバシーポリシー
           <% end %>
