--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -92,8 +92,8 @@
 <div class="container">
   <div class="row">
     <% @posts.each do |post| %>
-      <div class="col-lg-2 col-md-3 offset-md-1">
-        <div class="item" style="margin: 10px; border: none; border-radius: 5px; width: 180px;">
+      <div class="col-md-3 col-sm-6 col-12">
+        <div class="item" style="margin: 10px; border: none; border-radius: 5px">
           <%= link_to post_path(post) do %>
             <%= image_tag post.photos.first.image.url(:medium), class: "card-img-top" %>
           <% end %>
