--- a/app/views/partial/_navbar.html.erb
+++ b/app/views/partial/_navbar.html.erb
@@ -23,8 +23,8 @@
   <ul class="navbar-nav">
     <% if admin_signed_in? %>
       <li class="nav-item">
-        <%= link_to "#", class: 'nav-link text-dark' do %>
-          管理者ルール
+        <%= link_to admin_genres_path, class: 'nav-link text-dark' do %>
+          ジャンル管理
         <% end %>
       </li>
       <li class="nav-item">
