--- a/app/views/user/relathionships/followers.html.erb
+++ b/app/views/user/relathionships/followers.html.erb
@@ -1,4 +1,6 @@
-<h2>さんのフォロワー</h2>
+<h2>
+  <%= @user.name %>さんのフォロワー
+</h2>
 <% if @users.exists? %>
   <%= render "index", users: @users %>
 <% else %>
