--- a/app/views/user/relathionships/followings.html.erb
+++ b/app/views/user/relathionships/followings.html.erb
@@ -1,4 +1,6 @@
-<h2>さんのフォロー</h2>
+<h2>
+  <%= @user.name %>さんのフォロー
+</h2>
 <% if @users.exists? %>
   <%= render "index", users: @users %>
 <% else %>
