--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,8 +1,28 @@
-      <h3>ジャンル編集</h3>
+<div class="col-box-1">
+  <%= render "layouts/errors", obj: @genre %>
+</div>
 
-      <%= form_with model: @genre, url: admin_genre_path,method: :patch do |f| %>
-        <td><%= f.label :"ジャンル名", class: "mr-3" %></td>
-        <td><%= f.text_field :name, class: "mr-5" %></td>
-        <td><%= f.submit "変更を保存", class: "btn btn-primary" %></td>
-      <% end %>
+<div class="container my-5">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card">
+        <div class="card-header text-center">
+          <h3>ジャンル編集</h3>
+        </div>
+        <div class="card-body">
+          <%= form_with model: @genre, url: admin_genre_path,method: :patch do |f| %>
+            <div class="form-group row">
+              <label for="genre_name" class="col-sm-2 col-form-label">ジャンル名</label>
+              <div class="col-sm-8">
+                <%= f.text_field :name, class: "form-control" %>
+              </div>
+              <div class="col-sm-2">
+                <%= f.submit '変更を保存', class: "btn btn-primary w-100" %>
+              </div>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+</div>
    
