--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,3 +1,7 @@
+<div class="col-box-1">
+  <%= render "layouts/errors", obj: @genre %>
+</div>
+
 <div class="container my-5">
   <div class="row justify-content-center">
     <div class="col-md-8">
