いいね順機能追加

--- a/app/javascript/stylesheets/users/devise.scss
+++ b/app/javascript/stylesheets/users/devise.scss
@@ -145,6 +145,35 @@ footer {
   // background-color: #f8d7da;
 }
 
+// 新しい順、古い順、いいねの多い順のボタンの設定
+.sort-buttons{
+  flex-shrink: 0;
+  margin-right: 20px;
+  margin-left: 10px;
+}
+
+.sort-button {
+  display: flex;
+  padding: 10px 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+  color: #333;
+  text-decoration: none;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.sort-button:hover {
+  background-color: #e0e0e0;
+  color: #000;
+}
+
+.sort-button.active {
+  background-color: #ccc;
+  color: #000;
+}
+
 
 @media screen and (max-width: 768px) {
   .main {
