--- a/app/javascript/stylesheets/users/devise.scss
+++ b/app/javascript/stylesheets/users/devise.scss
@@ -174,6 +174,38 @@ footer {
   color: #000;
 }
 
+.pagination {
+  display: flex;
+  justify-content: center;  /* 中央に配置 */
+  padding-left: 0;
+  list-style: none;
+}
+
+.pagination>li>a {
+  border: none;            /* 枠線をなくす */
+  color: #808080;          /* 文字の色を変える */
+  margin: 0 5px;           /* アイテム間の余白を追加 */
+}
+
+.pagination>.active>a {
+  background: #4a4a4a;     /* 背景の色を濃いグレーに */
+  color: white;            /* 文字色を白に */
+  border-radius: 15px;     /* 角を丸くする */
+  border: none;
+}
+
+.pagination>li>a:hover {
+  border-radius: 15px;     /* 角を丸くする */
+  background-color: #93c9ff; /* ホバー時の背景色を変える */
+  color: white;            /* ホバー時の文字色を白に */
+}
+
+.page-item.active .page-link {
+    z-index: 3;
+    color: #fff;
+    background-color: #545462;
+    border-color: #6c757d;
+}
 
 @media screen and (max-width: 768px) {
   .main {
